add_library(simulation Simulation.cpp
            SimulatedBank.cpp SimCardReader.cpp
            SimCashDispenser.cpp SimDisplay.cpp
            SimEnvelopeAcceptor.cpp SimKeyboard.cpp
            SimOperatorPanel.cpp SimReceiptPrinter.cpp
            ATMPanel.cpp BillsPanel.cpp CardPanel.cpp
            GUI.cpp LogPanel.cpp ATMMainWindow.cpp)
